[tool.poetry]
name = "hebpipe"
version = "3.0.0.6"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
transformers = "4.38.0"
torch = "2.2.0"
xgboost = "2.0.3"
gensim = "^4.3.3"
rftokenizer = "^2.2.0"
numpy = ">=1.18.5,<2.0"
scipy = ">=1.7.0,<1.14.0"
depedit = "^3.4.0.1"
pandas = "^2.2.3"
joblib = "^1.4.2"
xmltodict = "^0.14.2"
diaparser = "1.1.3"
flair = "0.6.1"
stanza = "1.2.3"
conllu = "^6.0.0"
protobuf = "==3.20.*"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
